--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 					<p>Until one day, there’s this guy who made me feel like my heart wasn't broken and let me feel the warm of love again. It was like, the first time.
 					I don't see you in his eyes. I couldn't feel your touch in his skin. I couldn't recognize the feel of your love in him but I am sure... that every time I'm with him, I feel so loved and cared. He wasn't like you. He wasn't but I liked him too. I liked him to the point that; I forgot the pain of loving you. He puts the sun in my universe again to brighten the darkness you left me and he's definitely okay about it.
 					For him, it’s okay that every time I hear the Harry Potter thingy, it's you that came out my mind first. He likes Harry Potter too, and he’s definitely crazy about it. 
-					<a href="History.html" title="History">Read more...</a>
+					<a href="Readmore1.html" title="History">Read more...</a>
 				</section>
 				<section id="love">
 				<h3 style="font-family:Verdana;"> Love </h3>
@@ -34,7 +34,7 @@
 					<p> It was never my intention to make you fall in love with me. We just found ourselves bumped into each other when we struggle to find and reach for the light when we were on the endless place of darkness. And we decided to reach for the light with our fingers intertwined, smiles plastered on our faces and with hearts beating erratically.
 					<p> It was never my intention to fall in love with you. I just found myself longing with your presence every time you're not around. It's like a half of me was being taken if I couldn't see your smile full of love that was meant for me.
 					<p>You became one of my sources of happiness when it was all books and poetry which I enjoyed the most. And I've never regretted the fact that I added you on the list because you made me feel like I'm your source of life and you've never failed to make me feel like I'm the center of your world.
-			        <a href="Love.html" title="Love">Read more...</a>
+			        <a href="Readmore2.html" title="Love">Read more...</a>
 				<section id="abuse">
 				<h3 style="font-family:Verdana;"> Abuse </h3> 
 					<p> A word so little spoken about it. 
@@ -43,7 +43,7 @@
 						Nobody should suffer in any relationship a form of abuse, regards of type, formation or origins once it takes root abuse spreads like wild flowers in the cracks of foundations; taking over and consuming love. 
 					<p> Of more recent thought I realized unknowingly I was a pawn in a game of abuse; mentally and emotionally I was under siege in a relationship.
 						This siege wasn't noticeable to me, it wasn't a topic I believed was a concern for me I was young and happy in a relationship of good contentment and fullness but yet abuse isn't noticeable to those that suffer. 
-					<a href="Abuse.html" title="Abuse"> Read more... </a>
+					<a href="Readmore3.html" title="Abuse"> Read more... </a>
 				</section>
 				<section id="Father">
 				<h3 style="font-family:Verdana;"> To the man who broke my heart </h3>  
@@ -52,7 +52,7 @@
 					<p>Seeing the Man of my life, as a child , leaving; killed me. Was I not good enough? Was it my fault? Questions that run through my mind after you left. Not trusting guys, thinking everyone will walk out on me, anxiety; these were just few things I dealt with because of you.
 					<p>I used to wonder, What would it feel like to have a Dad who reads bedtime stories to me before sleep? What would it feel like to have a Dad who scares all of the guys who'll try to date me? What would it feel like to have a Dad who puts time and effort in our relationship and never makes me feel unloved by him? What would it feel like if YOU didn't leave?
 					<p>By my teenage years. I understood enough why you and Momma fought. You two were just victims of love. I know you did not leave with the intention of hurting me nor my sisters. But it did. A lot. And from time to time, I've come to realize that it's just a waste of time to hate you. And I've accepted it. And as an adult now, I would like to genuinely thank you.
-					<a href="Father.html" title="Father"> Read more... </a>
+					<a href="Readmore4.html" title="Father"> Read more... </a>
 				</section>
 				<section id="Looks">
 				<h3 style="font-family:Verdana;"> What It Feels To Wake Up In A Hot Body </h3>
@@ -69,7 +69,7 @@
 					<br>I was 18 when I first started to wondering what it was like to look like a normal girl. A typical girl. Unnoticed. Blending in to pictures of all other girlfriends, in pictures.
 					<br>I was 19 when I first started counting the stretch marks. I was standing next to my dancer friend, in front of the mirror complaining about gaining a few kilos.
 					She looked the same to me. She said she feels fat. That though she is not clinically over weight that she is fat. She spat the word out like it was poison.
-				<a href="Looks.html" title="Looks"> Read more... </a>
+				<a href="Readmore5.html" title="Looks"> Read more... </a>
 				</section>
 				<section>
 				<p> <h4> Read more at: </h4>
