--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 	 <title> Seek </title>
 	</head>
 		<body> <center> <h1 style="font-family:Times New Roman;"> Hidden Emotions </h1> 
-			<h2 style="font-family:Times New Roman;"> A Collage of Tales </h2> </center>
+			<h2 style="font-family:Times New Roman;"> A collage of Tales </h2> </center>
 				<h3 id="top"> Stories </h3>
 				<section>
 					<ul>
@@ -15,6 +15,7 @@
 						<li><a href="#Father">To the man who broke my heart</a></li>
 						<li><a href="#Looks">Size</a></li>
 					</ul>
+					<p> These are some gathered stories from 2 pages in Facebook. Please like the following pages, Sadness and Agony and Open Letters That Matter.
 				</section>
 				<section id="history">
 				<h3 style="font-family:Verdana;"> History </h3>
