--- a/Readmore1.html
+++ b/Readmore1.html
@@ -31,6 +31,6 @@
 
 		<p> <b> He left me when he found someone new.</b>
 		<p> &emsp; &emsp; &emsp; &emsp; -Quennie Dayo
-		<p>  <a href="Index.html" title="Seek">Back to Homepage</a>
+		<p>  <a href="index.html" title="Seek">Back to Homepage</a>
 		</body>
 </html>
