--- a/Readmore2.html
+++ b/Readmore2.html
@@ -15,6 +15,6 @@
 			<p>Love, I guess we're just an asymptote. We thought we would meet at the end point because we're both taking the path that we thought it could lead us into each other's arm but we're wrong. I guess this is the moment where the saying "Not because we met, means we we're meant for each other" applies. 
 			<p>It didn't turn well for the both of us but I loved you. And I will always do. Maybe that time that destiny tried to pair us up was not the very good timing for the both of us. Maybe we could be together someday. And I hope, when that time comes, you're still the same person I fell in love with.
 			<p> &emsp; &emsp; &emsp; &emsp; -Sarah May Medalle
-			<p> <a href="Index.html" title="Seek"> Back to Homepage </a>
+			<p> <a href="index.html" title="Seek"> Back to Homepage </a>
 		</body>
 </html>
