--- a/Readmore3.html
+++ b/Readmore3.html
@@ -23,7 +23,7 @@
 				Yet we say nobody should suffer of it with such force; force of affirmation.
 			<br> <b> Yet; abuse is the norm </b>
 			<p> &emsp; &emsp; &emsp; &emsp; -Caio
-			<p> <a href="Index.html" title="Seek"> Back to Homepage </a> 
+			<p> <a href="index.html" title="Seek"> Back to Homepage </a> 
 		</body>
 	</html>
 		
