--- a/Readmore4.html
+++ b/Readmore4.html
@@ -17,6 +17,6 @@
 			So, I mean it when I say I don't resent you anymore. Yes, I love you and of course I still miss you from time to time. Sometimes I look at old photographs of us and realize the scar you left will never disappear. But after all these years I can say, genuinely, I forgive you. After all, Dads suppose to make their daughters strong, and that's exactly what you did to me. And if there's a chance to be with you, so be it. You were and always will be my Dad.
 		<p>Sincerely,
 		<br>Your Daughter
-		<p> <a href="Index.html" title="Seek"> Back to Homepage </a>
+		<p> <a href="index.html" title="Seek"> Back to Homepage </a>
 	</body>
 </html>
