--- a/Readmore5.html
+++ b/Readmore5.html
@@ -35,6 +35,6 @@
 				But on some nights, my body doesn't wonder what it's like..cause my body already knows.
 			<p><b>Just that my body sometimes forgets.</b>
 			<p> &emsp; &emsp; &emsp; &emsp; -Grace Wickremasinghe 
-			<p> <a href="Index.html" title="Seek"> Back to Homepage </a>
+			<p> <a href="index.html" title="Seek"> Back to Homepage </a>
 		</body>
 </html>
